--- a/public/style.css
+++ b/public/style.css
@@ -35,6 +35,50 @@ header {
   width: 700px;
 }
 
+input[type="submit"] {
+  width: 150px;
+  height: 30px;
+  border-radius: 15px;
+  border: none;
+  color: white;
+  background-color: blue;
+  cursor: pointer;
+}
+
+/* -------- Modal ----------------- */
+#modal {
+  height: 100vh;
+  width: 100%;
+  background-color: rgb(99, 145, 153);
+  z-index: 99;
+  position: absolute;
+  text-align: center;
+  align-items: center;
+  padding-top: 25%;
+  /* visibility: hidden; */
+}
+
+select {
+  background-color: rgb(211, 218, 216);
+  width: 110px;
+  height: 50px;
+  text-align: center;
+  border: none;
+  padding-left: 18px;
+  margin-right: 30px;
+}
+
+#image-container {
+  display: flex;
+  justify-content: space-around;
+  margin: 50px;
+}
+
+#image-container, img {
+  width: 150px;
+  height: 180px;
+  margin: 25px;
+}
 /* -------- Search Container ------ */
 .search-container {
   display: flex;
